@@ -1,4 +1,5 @@
 ======================
+    ADDED: right-click menu now has a "create new..." submenu
     --architecture-- right-click menu code moved to a new class KrPopupMenu
     ADDED: ctrl-alt-enter opens the current folder in a new tab
     ADDED: calculate space in archives and remote FS (KDE >= 3.3.0) 
